# AO2-Client

./: .gitignore  CMakeLists.txt  data.qrc  spritechat.qrc
data/ui/: characterselect.ui
resource/ui/: lobby.ui
src/: aoapplication.cpp  aoapplication.h  aomusicplayer.cpp  characterselect.cpp  characterselect.h  characterselectlayout.cpp  characterselectlayout.h  characterslotbutton.cpp  characterslotbutton.h  charselect.cpp  courtroom.cpp  courtroom.h  datatypes.h  debug_functions.cpp  debug_functions.h  demoserver.cpp  demoserver.h  discord_rich_presence.cpp  emotes.cpp  lobby.cpp  main.cpp  networkmanager.cpp  options.cpp  packet_distribution.cpp  serverdata.h  text_file_functions.cpp
src/net/: netconnection.cpp  netconnection.h
src/qtutil/: qwidgetfinder.cpp  qwidgetfinder.h
src/widgets/: aooptionsdialog.cpp  direct_connect_dialog.cpp  server_editor_dialog.cpp  server_editor_dialog.h
